@@ -246,22 +246,21 @@
         <!-- Plot Font -->
         <font>
             <name>font_plotbox</name>
-            <filename>Roboto-Regular.ttf</filename>
-            <linespacing>1.17</linespacing>
+            <filename>Roboto-Regular-Linespacing.ttf</filename>
+            <linespacing>1</linespacing>
             <size>29</size>
             <aspect>0.9</aspect>
         </font>
         <font>
             <name>font_weather_small</name>
-            <filename>Roboto-Regular.ttf</filename>
-            <linespacing>1.15</linespacing>
+            <filename>Roboto-Regular-Linespacing.ttf</filename>
             <size>26</size>
             <aspect>0.9</aspect>
         </font>
         <font>
             <name>font_overlay_plotbox</name>
-            <filename>Roboto-Regular.ttf</filename>
-            <linespacing>1.6</linespacing>
+            <filename>Roboto-Regular-Linespacing.ttf</filename>
+            <linespacing>1.4</linespacing>
             <aspect>0.9</aspect>
             <size>48</size>
         </font>
