@@ -3,8 +3,8 @@
 <fonts>
     <fontset id="Default" unicode="true">
 
-        <include condition="!Skin.HasSetting(RobotoFonts)">Defaults_FauneFonts</include>
-        <include condition="Skin.HasSetting(RobotoFonts)">Defaults_RobotoFonts</include>
+        <include condition="Skin.HasSetting(FauneFonts)">Defaults_FauneFonts</include>
+        <include condition="!Skin.HasSetting(FauneFonts)">Defaults_RobotoFonts</include>
 
         <!-- Standard Fonts -->
         <font>
