@@ -489,8 +489,8 @@
                         <visible>Integer.IsEqual(Window.Property(CurrentFocus),9004)</visible>
                         <include>Defs_Settings_Button</include>
                         <label>$LOCALIZE[31092]</label>
-                        <selected>Skin.HasSetting(RobotoFonts)</selected>
-                        <onclick>Skin.ToggleSetting(RobotoFonts)</onclick>
+                        <selected>Skin.HasSetting(FauneFonts)</selected>
+                        <onclick>Skin.ToggleSetting(FauneFonts)</onclick>
                         <onclick>ReloadSkin()</onclick>
                     </control>
 
