@@ -2,6 +2,8 @@
 - Fix for long season numbers
 - Add 8 row simple list for pvr
 - Add button id 10 for pvr info
+- Set Roboto as default plotbox font
+- Add linespacing variant for Roboto plot
 
 0.9.35
 - Theme switcher between light and dark depending on time of day (Light 6am - Dark 6pm)
